# dbgflags

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  config.h.in  configure  configure.in  dbgflags.pc.in  libtool
include/: dbgflags
include/dbgflags-0/: ctxLogger.h  dbgflags.h  debug_macros.h  legacy_macros  loggers_streams  syslogex.h
include/dbgflags-1/: ModuleVersionInfo.h  ctxLogger.h  dbgflags.h  debug_macros.h  goodies.h  loggers.h  loggers_streams  syslogex.h  version.h
libdbgflags/: LibrariesNameBuffer.h  LibraryDebugFlagsEntry.h  Makefile.am  Makefile.in  ProcDebugFlagsUDSEntry.h  RemoteStatus.h  UdsManagement.h  UdsServerManagement.h  aioFileLogger.c  buffers.h  configurationFile.h  configurationFileData.h  consoleLogger.c  ctxLogger.c  dbgFlagsUDS.c  debug.h  dynamicLogger.c  dynamicLogger.h  fileLogger.c  filesUtils.h  goodies.c  libdbgflags.map  networkUtils.h  printf_hook.c  protocol.h  setFullFileName.h  syslogex.c  system.h  threadFileLogger.c  utils.c  utils.h
logproc/: Makefile.am  Makefile.in  ModuleVersionInfo.h  main.c
man/: Makefile.am  Makefile.in  consoleLogger.3  ctxLogger.3  dynamicLogger.3  fileLogger.3  logproc.1  registerDebugFlags.3  syslogex.3  threadFileLogger.3  zo.1
tests/: Makefile.am  Makefile.in
tests/big_messages/: Makefile.am  Makefile.in
tests/big_messages/console/: Makefile.am  Makefile.in
tests/big_messages/file/: Makefile.am  Makefile.in  main.c
tests/logproc_test/: main.c
tests/main/: Makefile.am  Makefile.in  main.cpp
tests/main-dynamic/: Makefile.am  Makefile.in  main.cpp
tests/main-dynamic-pkgconfig/: Makefile.am  Makefile.in  main.cpp
tests/main-dynamic-xml/: Makefile.am  Makefile.in  dynamicLogger.xml  main.cpp
tests/main-dynamic/c/: Makefile.am  Makefile.in  main.c
tests/main-dynamic/cpp/: Makefile.am  Makefile.in  dynamicLogger.conf  main.cpp
tests/main_static/: Makefile.am  Makefile.in  main.cpp
tests/perfs/: Makefile.am  Makefile.in
tests/perfs/c/: Makefile.in
tests/perfs/c_d0/: Makefile.am  Makefile.in
tests/perfs/c_d1/: Makefile.am  Makefile.in
tests/perfs/c_ref/: Makefile.am  Makefile.in  main.c
tests/perfs/cpp/: Makefile.am  Makefile.in
tests/perfs/cpp_c/: Makefile.am  Makefile.in
tests/perfs/cpp_c_d0/: Makefile.am  Makefile.in
tests/perfs/cpp_c_d1/: Makefile.am  Makefile.in
tests/perfs/cpp_d0/: Makefile.am  Makefile.in
tests/perfs/cpp_d1/: Makefile.am  Makefile.in
tests/perfs/cpp_ref/: Makefile.in  main.cpp
tests/perfs_all_loggers/: Makefile.am  Makefile.in
tests/perfs_all_loggers/c_ref/: Makefile.am  Makefile.in  main.c
tests/perfs_all_loggers/console/: Makefile.in
tests/perfs_all_loggers/console/c/: Makefile.am  Makefile.in
tests/perfs_all_loggers/console/c_d0/: Makefile.am  Makefile.in
tests/perfs_all_loggers/console/c_d1/: Makefile.am  Makefile.in
tests/perfs_all_loggers/console/c_ref/: Makefile.am  Makefile.in
tests/perfs_all_loggers/console/cpp/: Makefile.am  Makefile.in
tests/perfs_all_loggers/console/cpp_c/: Makefile.am  Makefile.in
tests/perfs_all_loggers/console/cpp_c_d0/: Makefile.am  Makefile.in
tests/perfs_all_loggers/console/cpp_c_d1/: Makefile.am  Makefile.in
tests/perfs_all_loggers/console/cpp_calls_dynamic/: Makefile.am  Makefile.in
tests/perfs_all_loggers/console/cpp_calls_dynamic_d0/: Makefile.am  Makefile.in  main.cpp
tests/perfs_all_loggers/console/cpp_calls_static/: Makefile.am  Makefile.in
tests/perfs_all_loggers/console/cpp_calls_static_d0/: Makefile.am  Makefile.in
tests/perfs_all_loggers/console/cpp_d0/: Makefile.am  Makefile.in
tests/perfs_all_loggers/console/cpp_d1/: Makefile.am  Makefile.in
tests/perfs_all_loggers/console/cpp_ref/: Makefile.am  Makefile.in
tests/perfs_all_loggers/cpp_ref/: Makefile.am  Makefile.in  main.cpp
tests/perfs_all_loggers/dynamic/: Makefile.am  Makefile.in
tests/perfs_all_loggers/dynamic/c/: Makefile.am  Makefile.in
tests/perfs_all_loggers/dynamic/c_d0/: Makefile.am  Makefile.in  main.c
tests/perfs_all_loggers/dynamic/c_d1/: Makefile.am  Makefile.in
tests/perfs_all_loggers/dynamic/c_ref/: Makefile.am  Makefile.in
tests/perfs_all_loggers/dynamic/cpp/: Makefile.am  Makefile.in
tests/perfs_all_loggers/dynamic/cpp_c/: Makefile.am  Makefile.in
tests/perfs_all_loggers/dynamic/cpp_c_d0/: Makefile.am  Makefile.in
tests/perfs_all_loggers/dynamic/cpp_c_d1/: Makefile.am  Makefile.in
tests/perfs_all_loggers/dynamic/cpp_calls_dynamic/: Makefile.am  Makefile.in
tests/perfs_all_loggers/dynamic/cpp_calls_dynamic_d0/: Makefile.am  Makefile.in
tests/perfs_all_loggers/dynamic/cpp_calls_static/: Makefile.am  Makefile.in
tests/perfs_all_loggers/dynamic/cpp_calls_static_d0/: Makefile.am  Makefile.in  main.cpp
tests/perfs_all_loggers/dynamic/cpp_d0/: Makefile.am  Makefile.in  (+1 more)
tests/perfs_all_loggers/file/: Makefile.in
tests/perfs_all_loggers/file/c/: Makefile.am  Makefile.in  README  main.c
tests/perfs_all_loggers/file/c_d1/: Makefile.am  Makefile.in  main.c
tests/perfs_all_loggers/file/cpp/: Makefile.am  Makefile.in  main.cpp
tests/perfs_all_loggers/file/cpp_c_d1/: Makefile.am  Makefile.in
tests/perfs_all_loggers/file/cpp_calls_dynamic/: Makefile.am  Makefile.in  main.cpp
tests/perfs_all_loggers/syslog/: Makefile.in
tests/perfs_all_loggers/syslog/c/: Makefile.am  Makefile.in
tests/perfs_all_loggers/syslog/c_ref/: Makefile.am  Makefile.in  main.c
tests/perfs_all_loggers/syslog/cpp/: Makefile.am  Makefile.in
tests/perfs_all_loggers/syslog/cpp_c/: Makefile.am  Makefile.in
tests/perfs_all_loggers/syslog/cpp_c_d1/: Makefile.am  Makefile.in  main.cpp
tests/perfs_all_loggers/syslog/cpp_d1/: Makefile.am  Makefile.in  main.cpp
tests/perfs_all_loggers/syslogex/: Makefile.in
tests/perfs_all_loggers/threadfile/: Makefile.in
tests/printf_extensions_tests/: Makefile.am  Makefile.in  main.cpp
tests/threads/: Makefile.am  Makefile.in
tests/threads/file/: Makefile.in
tests/threads/threadfile_async/: Makefile.am  Makefile.in
tests/threads/threadfile_async_error/: Makefile.in
zo/: Makefile.am  Makefile.in  main.c
(+128 files in other folders)
