#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(dbgflags,0.0.2,oliviers.open.source.softwares@gmail.com)
AM_INIT_AUTOMAKE([dist-bzip2])
LIBDBGFLAGS_VERSION=1
LIBDBGFLAGS_REVISION=0
LIBDBGFLAGS_INTERFACE_AGE=1
AC_CONFIG_SRCDIR([libdbgflags/dbgFlagsUDS.c])
AM_CONFIG_HEADER([config.h])
AM_PROG_LIBTOOL

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_LIBTOOL
AC_PROG_RANLIB

# Checks for libraries.
AC_CHECK_LIB([pthread], [pthread_create])
AC_CHECK_LIB([rt], [main])

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_TIME
AC_HEADER_SYS_WAIT
AC_HEADER_STDBOOL
AC_CHECK_HEADERS([errno.h fcntl.h locale.h netdb.h paths.h stdio_ext.h stdlib.h string.h syslog.h unistd.h sys/socket.h sys/param.h sys/time.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_C_VOLATILE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_MODE_T
AC_TYPE_UID_T
AC_STRUCT_TM

# set library version
AC_SUBST(LIBDBGFLAGS_VERSION)
AC_SUBST(LIBDBGFLAGS_REVISION)
AC_SUBST(LIBDBGFLAGS_INTERFACE_AGE)

# debug
AC_ARG_ENABLE(debug,
        [  --enable-debug enable debug mode ],
        [case "${enableval}" in
         yes) enable_debug="yes";;
          no) enable_debug="no" ;;
           *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
         esac],
        [enable_debug="no"]
)
if test "$enable_debug" = "yes"; then
        AC_DEFINE(_DEBUG_, 1, [Defined if debug mode is enabled (its easier to check).])
        #CFLAGS="$CFLAGS -O0 -ggdb3"
fi
if test "$enable_debug" = "no"; then
        AC_DEFINE(NDEBUG, 1, [Defined if debug mode is disabled.])
fi

# trace call / profiling
AC_ARG_ENABLE(profiling, [  --enable-profiling-hooks enable profiling hooks ],
       [case "${enableval}" in
         yes) enable_profiling_hooks="yes";;
          no) enable_profiling_hooks="no" ;;
           *) AC_MSG_ERROR(bad value ${enableval} for --enable-profiling-hooks) ;;
         esac],
        [enable_profiling_hooks="no"]
)
if test "$enable_profiling_hooks" = "yes"; then
        AC_DEFINE(PROFILING_HOOKS_ENABLED, 1, [Defined if profilink hooks are enabled])
fi

# Checks for library functions.
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_FUNC_FORK
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_ERROR_AT_LINE
AC_CHECK_FUNCS([atexit gettimeofday localtime_r memmove mempcpy memset mkdir socket strcasecmp strncasecmp strrchr strstr strtoul connect dup2 select strchr strerror])

# extras subdirectory is not available (and useless) in the public open source version
# extras//Makefile   
# extras/profiler/Makefile
# extras/profiler/test/Makefile
# extras/tis_legacy/Makefile
# extras/tis_legacy/test/Makefile

AC_CONFIG_FILES([Makefile
                 dbgflags.pc
                 libdbgflags/Makefile
                 zo/Makefile
                 logproc/Makefile                 
                 tests/Makefile
                 tests/main/Makefile
                 tests/main_static/Makefile
                 tests/perfs/Makefile
                 tests/perfs/c/Makefile
                 tests/perfs/cpp/Makefile
                 tests/perfs/c_d0/Makefile
                 tests/perfs/c_d1/Makefile
                 tests/perfs/c_ref/Makefile
                 tests/perfs/cpp_ref/Makefile
                 tests/perfs/cpp_c/Makefile
                 tests/perfs/cpp_c_d0/Makefile
                 tests/perfs/cpp_c_d1/Makefile
                 tests/perfs/cpp_d0/Makefile
                 tests/perfs/cpp_d1/Makefile
                 tests/perfs_all_loggers/Makefile
                 tests/perfs_all_loggers/console/Makefile
                 tests/perfs_all_loggers/console/c/Makefile
                 tests/perfs_all_loggers/console/c_d0/Makefile
                 tests/perfs_all_loggers/console/c_d1/Makefile
                 tests/perfs_all_loggers/console/cpp/Makefile
                 tests/perfs_all_loggers/console/cpp_c/Makefile
                 tests/perfs_all_loggers/console/cpp_calls_dynamic/Makefile
                 tests/perfs_all_loggers/console/cpp_calls_dynamic_d0/Makefile
                 tests/perfs_all_loggers/console/cpp_calls_static/Makefile
                 tests/perfs_all_loggers/console/cpp_calls_static_d0/Makefile
                 tests/perfs_all_loggers/console/cpp_c_d0/Makefile
                 tests/perfs_all_loggers/console/cpp_c_d1/Makefile
                 tests/perfs_all_loggers/console/cpp_d0/Makefile
                 tests/perfs_all_loggers/console/cpp_d1/Makefile
                 tests/perfs_all_loggers/console/cpp_ref/Makefile
                 tests/perfs_all_loggers/console/c_ref/Makefile
                 tests/perfs_all_loggers/cpp_ref/Makefile
                 tests/perfs_all_loggers/c_ref/Makefile
                 tests/perfs_all_loggers/file/Makefile
                 tests/perfs_all_loggers/file/c/Makefile
                 tests/perfs_all_loggers/file/c_d0/Makefile
                 tests/perfs_all_loggers/file/c_d1/Makefile
                 tests/perfs_all_loggers/file/cpp/Makefile
                 tests/perfs_all_loggers/file/cpp_c/Makefile
                 tests/perfs_all_loggers/file/cpp_calls_dynamic/Makefile
                 tests/perfs_all_loggers/file/cpp_calls_dynamic_d0/Makefile
                 tests/perfs_all_loggers/file/cpp_calls_static/Makefile
                 tests/perfs_all_loggers/file/cpp_calls_static_d0/Makefile
                 tests/perfs_all_loggers/file/cpp_c_d0/Makefile
                 tests/perfs_all_loggers/file/cpp_c_d1/Makefile
                 tests/perfs_all_loggers/file/cpp_d0/Makefile
                 tests/perfs_all_loggers/file/cpp_d1/Makefile
                 tests/perfs_all_loggers/file/cpp_ref/Makefile
                 tests/perfs_all_loggers/file/c_ref/Makefile
                 tests/perfs_all_loggers/syslog/Makefile
                 tests/perfs_all_loggers/syslog/c/Makefile
                 tests/perfs_all_loggers/syslog/c_d0/Makefile
                 tests/perfs_all_loggers/syslog/c_d1/Makefile
                 tests/perfs_all_loggers/syslog/cpp/Makefile
                 tests/perfs_all_loggers/syslog/cpp_c/Makefile
                 tests/perfs_all_loggers/syslog/cpp_calls_dynamic/Makefile
                 tests/perfs_all_loggers/syslog/cpp_calls_dynamic_d0/Makefile
                 tests/perfs_all_loggers/syslog/cpp_calls_static/Makefile
                 tests/perfs_all_loggers/syslog/cpp_calls_static_d0/Makefile
                 tests/perfs_all_loggers/syslog/cpp_c_d0/Makefile
                 tests/perfs_all_loggers/syslog/cpp_c_d1/Makefile
                 tests/perfs_all_loggers/syslog/cpp_d0/Makefile
                 tests/perfs_all_loggers/syslog/cpp_d1/Makefile
                 tests/perfs_all_loggers/syslog/cpp_ref/Makefile
                 tests/perfs_all_loggers/syslog/c_ref/Makefile
                 tests/perfs_all_loggers/syslogex/Makefile
                 tests/perfs_all_loggers/syslogex/c/Makefile
                 tests/perfs_all_loggers/syslogex/c_d0/Makefile
                 tests/perfs_all_loggers/syslogex/c_d1/Makefile
                 tests/perfs_all_loggers/syslogex/cpp/Makefile
                 tests/perfs_all_loggers/syslogex/cpp_c/Makefile
                 tests/perfs_all_loggers/syslogex/cpp_calls_dynamic/Makefile
                 tests/perfs_all_loggers/syslogex/cpp_calls_dynamic_d0/Makefile
                 tests/perfs_all_loggers/syslogex/cpp_calls_static/Makefile
                 tests/perfs_all_loggers/syslogex/cpp_calls_static_d0/Makefile
                 tests/perfs_all_loggers/syslogex/cpp_c_d0/Makefile
                 tests/perfs_all_loggers/syslogex/cpp_c_d1/Makefile
                 tests/perfs_all_loggers/syslogex/cpp_d0/Makefile
                 tests/perfs_all_loggers/syslogex/cpp_d1/Makefile
                 tests/perfs_all_loggers/syslogex/cpp_ref/Makefile
                 tests/perfs_all_loggers/syslogex/c_ref/Makefile
                 ])
AC_OUTPUT
